--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -29,7 +29,7 @@
                 <!--ko foreach: { data: $component.textStyles, as: 'textStyle' }-->
                 <div class="style-card style-card-framed" data-bind="stylable: textStyle">
                     <div class="style-card-body">
-                        <span data-bind="styled: textStyle">
+                        <span data-bind="stylePreview:textStyle">
                             Abc
                         </span>
                         <span class="style-card-label" data-bind="text: textStyle.displayName"></span>
@@ -50,36 +50,36 @@
                 <article>
                     <div class="style-card" data-bind="stylable: globals.h1.default">
                         <div class="style-card-body">
-                            <h1 data-bind="styled: globals.h1.default">Heading level 1</h1>
+                            <h1 data-bind="stylePreview:globals.h1.default">Heading level 1</h1>
                         </div>
                     </div>
                     <div class="style-card" data-bind="stylable: globals.h2.default">
                         <div class="style-card-body">
-                            <h2 data-bind="styled: globals.h2.default">Heading level 2</h2>
+                            <h2 data-bind="stylePreview:globals.h2.default">Heading level 2</h2>
                         </div>
                     </div>
 
                     <div class="style-card" data-bind="stylable: globals.h3.default">
                         <div class="style-card-body">
-                            <h3 data-bind="styled: globals.h3.default">Heading level 3</h3>
+                            <h3 data-bind="stylePreview:globals.h3.default">Heading level 3</h3>
                         </div>
                     </div>
 
                     <div class="style-card" data-bind="stylable: globals.h4.default">
                         <div class="style-card-body">
-                            <h4 data-bind="styled: globals.h4.default">Heading level 4</h4>
+                            <h4 data-bind="stylePreview:globals.h4.default">Heading level 4</h4>
                         </div>
                     </div>
 
                     <div class="style-card" data-bind="stylable: globals.h5.default">
                         <div class="style-card-body">
-                            <h5 data-bind="styled: globals.h5.default">Heading level 5</h5>
+                            <h5 data-bind="stylePreview:globals.h5.default">Heading level 5</h5>
                         </div>
                     </div>
 
                     <div class="style-card" data-bind="stylable: globals.h5.default">
                         <div class="style-card-body">
-                            <h6 data-bind="styled: globals.h6.default">Heading level 6</h6>
+                            <h6 data-bind="stylePreview:globals.h6.default">Heading level 6</h6>
                         </div>
                     </div>
                 </article>
@@ -89,7 +89,7 @@
                 <article>
                     <div class="style-card" data-bind="stylable: globals.p.default">
                         <div class="style-card-body">
-                            <p data-bind="styled: globals.p.default">
+                            <p data-bind="stylePreview:globals.p.default">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt
                                 ut
@@ -108,7 +108,7 @@
                 <article>
                     <div class="style-card" data-bind="stylable: globals.a.default">
                         <div class="style-card-body">
-                            <a href="#" data-bind="styled: globals.a.default">Regular link</a>
+                            <a href="#" data-bind="stylePreview:globals.a.default">Regular link</a>
                         </div>
                     </div>
                 </article>
@@ -116,7 +116,7 @@
                 <article>
                     <div class="style-card" data-bind="stylable: globals.blockquote.default">
                         <div class="style-card-body">
-                            <blockquote data-bind="styled: globals.blockquote.default">
+                            <blockquote data-bind="stylePreview:globals.blockquote.default">
                                 Typography is the craft of endowing human language with a durable visual form. <br />
                                 - Robert Bringhurst
                             </blockquote>
@@ -129,7 +129,7 @@
             <div class="col-md-6">
                 <div class="style-card" data-bind="stylable: globals.ul.default">
                     <div class="style-card-body">
-                        <ul class="style-card" data-bind="styled: globals.ul.default">
+                        <ul class="style-card" data-bind="stylePreview:globals.ul.default">
                             <li>
                                 List item 1
                             </li>
@@ -206,7 +206,7 @@
                 <!--ko foreach: { data: $component.buttons, as: 'button' }-->
                 <div class="sample style-card" data-bind="stylable: button">
                     <div class="style-card-body">
-                        <button data-bind="styled: button">Button</button>
+                        <button data-bind="stylePreview:button">Button</button>
                     </div>
                     <span class="style-card-label" data-bind="text: button.displayName"></span>
                 </div>
@@ -230,7 +230,7 @@
                         <div class="form-group">
                             <label>Label</label>
                             <input type="text" class="form-control" value="Input value"
-                                data-bind="styled: components.formControl.default" />
+                                data-bind="stylePreview:components.formControl.default" />
                         </div>
                     </div>
                     <span class="style-card-label" data-bind="text: components.formControl.default.displayName"></span>
@@ -244,7 +244,7 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label>Label</label>
-                    <input type="text" class="form-control" disabled value="Input value" data-bind="styled: components.formControl.default" />
+                    <input type="text" class="form-control" disabled value="Input value" data-bind="stylePreview:components.formControl.default" />
                 </div>
             </div>
         </div>
@@ -255,7 +255,7 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label>Label</label>
-                    <input type="text" class="form-control is-valid" value="Input value" data-bind="styled: components.formControl.default" />
+                    <input type="text" class="form-control is-valid" value="Input value" data-bind="stylePreview:components.formControl.default" />
                     <div class="valid-feedback">
                         Looks good!
                     </div>
@@ -269,16 +269,16 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label>Label</label>
-                    <input type="text" class="form-control is-invalid" value="Input value" data-bind="styled: components.formControl.default" />
+                    <input type="text" class="form-control is-invalid" value="Input value" data-bind="stylePreview:components.formControl.default" />
                     <div class="invalid-feedback">
                         Please fix input errors.
                     </div>
                 </div>
             </div>
         </div> -->
-        <!-- <input type="text" value="Input value" data-bind="styled: components.formControl.default" />
+        <!-- <input type="text" value="Input value" data-bind="stylePreview:components.formControl.default" />
 
-        <textarea data-bind="styled: components.formControl.default">Text area content</textarea> -->
+        <textarea data-bind="stylePreview:components.formControl.default">Text area content</textarea> -->
 
 
     </article>
@@ -287,7 +287,7 @@
         <h2 class="heading">Navigation</h2>
         <div class="style-card" data-bind="stylable: components.navbar.default">
             <div class="style-card-body">
-                <nav class="navbar navbar-expand" data-bind="styled: components.navbar.default">
+                <nav class="navbar navbar-expand" data-bind="stylePreview:components.navbar.default">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false"
                         aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -295,15 +295,15 @@
                     <div class="collapse navbar-collapse"></div>
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="#"
-                            data-bind="stylable: components.navbar.default.components.navLink, styled: components.navbar.default.components.navLink">
+                            data-bind="stylable: components.navbar.default.components.navLink, stylePreview:components.navbar.default.components.navLink">
                             Nav item
                         </a>
                         <a class="nav-item nav-link" href="#"
-                            data-bind="stylable: components.navbar.default.components.navLink, styled: components.navbar.default.components.navLink">
+                            data-bind="stylable: components.navbar.default.components.navLink, stylePreview:components.navbar.default.components.navLink">
                             Nav item
                         </a>
                         <a class="nav-item nav-link" href="#"
-                            data-bind="stylable: components.navbar.default.components.navLink,styled: components.navbar.default.components.navLink">
+                            data-bind="stylable: components.navbar.default.components.navLink,stylePreview:components.navbar.default.components.navLink">
                             Nav item
                         </a>
                     </div>
@@ -320,7 +320,7 @@
             <div class="col col-md-4">
                 <div class="style-card" data-bind="stylable: picture">
                     <div class="style-card-body">
-                        <img src="http://cdn.paperbits.io/images/placeholder-340x190.jpg" data-bind="styled: picture" />
+                        <img src="http://cdn.paperbits.io/images/placeholder-340x190.jpg" data-bind="stylePreview:picture" />
                     </div>
                     <span class="style-card-label" data-bind="text: picture.displayName"></span>
                 </div>
@@ -341,7 +341,7 @@
             <!--ko foreach: { data: $component.videoPlayers, as: 'videoPlayer' }-->
             <div class="col col-md-4 style-card" data-bind="stylable: videoPlayer">
                 <div class="style-card-body">
-                    <video data-bind="styled: videoPlayer">
+                    <video data-bind="stylePreview:videoPlayer">
                         <source src="https://cdn.paperbits.io/videos/planet-earth.mp4" />
                     </video>
                 </div>
@@ -363,7 +363,7 @@
             <!--ko foreach: { data: $component.cards, as: 'card' }-->
             <div class="col col-md-4 style-card" data-bind="stylable: card">
                 <div class="style-card-body">
-                    <div data-bind="styled: card">
+                    <div data-bind="stylePreview:card">
                         <h1>Card</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor...</p>
                     </div>
