addeded ordered list to style guide

--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -148,7 +148,29 @@
                         </ul>
                     </div>
                 </div>
-
+            </div>
+            <div class="col-md-6">
+                <div class="style-card" data-bind="stylable: globals.ol.default">
+                    <div class="style-card-body">
+                        <ol class="style-card" data-bind="stylePreview:globals.ol.default">
+                            <li>
+                                List item 1
+                            </li>
+                            <li>
+                                List item 2
+                            </li>
+                            <li>
+                                List item 3
+                            </li>
+                            <li>
+                                List item 4
+                            </li>
+                            <li>
+                                List item 5
+                            </li>
+                        </ol>
+                    </div>
+                </div>
             </div>
         </div>
     </article>
