minor fixes in style compiler

--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -345,7 +345,7 @@
             <div class="col col-md-4">
                 <div class="style-card" data-bind="stylable: picture">
                     <div class="style-card-body">
-                        <img src="http://cdn.paperbits.io/images/placeholder-340x190.jpg"
+                        <img src="https://cdn.paperbits.io/images/placeholder-340x190.jpg"
                             data-bind="stylePreview:picture" />
                     </div>
                     <span class="style-card-label" data-bind="text: picture.displayName"></span>
