property renaming around box editor

--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -29,5 +29,5 @@
 
     <animation params="{ animation: elementStyleAnimation, onUpdate: onAnimationUpdate }"></animation>
 
-    <box-editor params="{ elementStyle: elementStyleBox, onUpdate: onBoxModelUpdate }"></box-editor>
+    <box-editor params="{ box: elementStyleBox, onUpdate: onBoxUpdate }"></box-editor>
 </fieldset>
