--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -123,6 +123,17 @@
                         </div>
                     </div>
                 </article>
+
+                <article>
+                    <div class="style-card" data-bind="stylable: globals.pre.default">
+                        <div class="style-card-body">
+                            <pre data-bind="stylePreview:globals.pre.default">class PictureModel {    
+    sourceKey: string;    
+    caption: string;
+}</pre>
+                        </div>
+                    </div>
+                </article>
             </div>
         </div>
         <div class="row">
