Added "active" variation for navitem

--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -337,13 +337,9 @@
                                     data-bind="stylable: navbar.components.navLink.default, stylePreview:navbar.components.navLink.default">
                                     Nav item
                                 </a>
-                                <a class="nav-item nav-link" href="#"
-                                    data-bind="stylable: navbar.components.navLink.default, stylePreview:navbar.components.navLink.default">
-                                    Nav item
-                                </a>
-                                <a class="nav-item nav-link" href="#"
-                                    data-bind="stylable: navbar.components.navLink.default,stylePreview:navbar.components.navLink.default">
-                                    Nav item
+                                <a class="nav-item nav-link nav-link-active" href="#"
+                                    data-bind="stylable: navbar.components.navLink.active, stylePreview:navbar.components.navLink.active">
+                                    Nav item (active)
                                 </a>
                             </div>
                         </nav>
