Fixes and refacoring around styles

--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -365,8 +365,7 @@
             <div class="col col-md-4">
                 <div class="style-card" data-bind="stylable: picture">
                     <div class="style-card-body">
-                        <img src="https://cdn.paperbits.io/images/placeholder-340x190.jpg"
-                            data-bind="stylePreview:picture" />
+                        <img alt="Picture" data-bind="stylePreview: picture" width="340px" height="190px" />
                     </div>
                     <span class="style-card-label" data-bind="text: picture.displayName"></span>
                 </div>
