added shadow style editor

--- a/src/styleGuide/styleGuide.html
+++ b/src/styleGuide/styleGuide.html
@@ -232,6 +232,12 @@
                 <span class="style-card-label" data-bind="text: shadow.displayName"></span>
             </div>
             <!--/ko -->
+            <div class="style-card style-card-empty">
+                <button class="btn-round" data-bind="click: $component.addShadow"></button>
+                <div class="style-card-label">
+                    Add shadow
+                </div>
+            </div>
         </div>
     </article>
 
