--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -24,7 +24,7 @@
     <!-- ko if: allowBlockStyles -->
     <!-- <gradient-editor></gradient-editor> -->
     <background params="{ background: elementStyleBackground, onUpdate: onBackgroundUpdate }"></background>
-    <shadow-editor params="{ shadow: elementStyleShadow, onUpdate: onShadowUpdate }"></shadow-editor>
+    <shadow-editor-group params="{ shadow: elementStyleShadow, onUpdate: onShadowUpdate }"></shadow-editor-group>
     <animation params="{ animation: elementStyleAnimation, onUpdate: onAnimationUpdate }"></animation>
     <box-editor params="{ box: elementStyleBox, onUpdate: onBoxUpdate }"></box-editor>
     <!-- /ko -->
