Allowed negative offset for shadows

--- a/src/workshops/shadows/shadowEditor.html
+++ b/src/workshops/shadows/shadowEditor.html
@@ -32,11 +32,11 @@
             </div>
             <div class="form-group">
                 <label for="offsetX">Shadow offset X (in px)</label>
-                <input id="offsetX" type="number" class="form-control" min="0" data-bind="textInput: offsetX" />
+                <input id="offsetX" type="number" class="form-control" data-bind="textInput: offsetX" />
             </div>
             <div class="form-group">
                 <label for="offsetY">Shadow offset Y (in px)</label>
-                <input id="offsetY" type="number" class="form-control" min="0" data-bind="textInput: offsetY" />
+                <input id="offsetY" type="number" class="form-control" data-bind="textInput: offsetY" />
             </div>
             <div class="form-group">
                 <label class="form-label">
