--- a/src/workshops/typography/typography.html
+++ b/src/workshops/typography/typography.html
@@ -8,32 +8,32 @@
     <div id="typographyCollapse" class="collapse form-group-collapse">
         <div class="form-group">
             <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': fontWeight() === 'bold' }" title="Bold">
-                <a href="#" data-bind="click: toggleBold">
+                <a href="#" data-bind="click: toggleBold" aria-label="Make text bold">
                     <i class="paperbits-icon paperbits-bold"></i>
                 </a>
             </div>
             <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': fontStyle() === 'italic' }" title="Italic">
-                <a href="#" data-bind="click: toggleItalic">
+                <a href="#" data-bind="click: toggleItalic" aria-label="Make text italic">
                     <i class="paperbits-icon paperbits-italic"></i>
                 </a>
             </div>
-            <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active':  textAlign() == 'left' }" title="Align left">
-                <a href="#" data-bind="click: alignLeft">
+            <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': textAlign() == 'left' }" title="Align left">
+                <a href="#" data-bind="click: alignLeft" aria-label="Align text left">
                     <i class="paperbits-icon paperbits-align-left-2"></i>
                 </a>
             </div>
             <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': textAlign() == 'center' }" title="Align center">
-                <a href="#" data-bind="click: alignCenter">
+                <a href="#" data-bind="click: alignCenter" aria-label="Align text center">
                     <i class="paperbits-icon paperbits-align-center"></i>
                 </a>
             </div>
-            <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active':  textAlign() == 'right' }" title="Align right">
-                <a href="#" data-bind="click: alignRight">
+            <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': textAlign() == 'right' }" title="Align right">
+                <a href="#" data-bind="click: alignRight" aria-label="Align text right">
                     <i class="paperbits-icon paperbits-align-right-2"></i>
                 </a>
             </div>
-            <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active':  textAlign() == 'justify' }" title="Justify">
-                <a href="#" data-bind="click: justify">
+            <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': textAlign() == 'justify' }" title="Justify">
+                <a href="#" data-bind="click: justify" aria-label="Justify text">
                     <i class="paperbits-icon paperbits-align-justify"></i>
                 </a>
             </div>
