Added "transoform" style plugin

--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -27,5 +27,6 @@
     <shadow-editor-group params="{ shadow: elementStyleShadow, onUpdate: onShadowUpdate }"></shadow-editor-group>
     <animation params="{ animation: elementStyleAnimation, onUpdate: onAnimationUpdate }"></animation>
     <box-editor params="{ box: elementStyleBox, onUpdate: onBoxUpdate }"></box-editor>
+    <transform params="{ transform: elementStyleTransform, onUpdate: onTransformUpdate }"></transform>
     <!-- /ko -->
 </fieldset>
