--- a/src/workshops/container/container.html
+++ b/src/workshops/container/container.html
@@ -51,7 +51,7 @@
     <div id="contentFlowCollapse" class="collapse form-group-collapse">
         <label class="form-label">
             <input name="scrollOnOverlow" type="checkbox"
-                data-bind="checked: scrollOnOverlow, event: { change: toggleOverflow }" />Scroll on overflow
+                data-bind="checked: scrollOnOverlow" />Scroll on overflow
         </label>
     </div>
 </div>
